--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,4 +4,4 @@ main: ro.cofi.custommobdrops.CustomMobDrops
 api-version: 1.19
 prefix: cmdrops
 authors: [ Deathcofi ]
-description: A PaperMC plugin to provide customizable and conditioned mob drops through JSON
+description: A PaperMC plugin to provide customizable and conditioned mob drops
